--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -1,4 +1,7 @@
-.text{
+.container-footer{
     text-align: center;
     font-size: 1.2rem;
+    background-color: black;
+    padding: 20px;
+     
 }
